--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <h1><a href="index.html">Lawrence Agyepong</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>data analyst and researcher</span>!</h2>
+      <h2>I'm a passionate <span>Data Analyst and Researcher</span>!</h2>
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <!--<li><a class="nav-link" href="#portfolio">Portfolio</a></li> -->
           <!--<li><a class="nav-link" href="#services">Blog</a></li> -->
           <li><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
@@ -85,7 +85,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Data Analyst &amp; Researcher</h3>
           <p class="fst-italic">
-            Three words describe my present self: Empathetic, Meticulous, and Reflective. Currently, I am pursuing an MPhil in Economics at the University of Ghana while investing time in learning and teaching data analytics and research skills. I'm proficient in Python, Excel, Tableau, and SQL. My superpower is to ask effective research questions and creatively leverage my skills and knowledge to reach solutions that create value.
+            Currently, I am pursuing an MPhil in Economics at the University of Ghana while investing time in learning and teaching data analytics and research skills. I'm proficient in Python, Excel, Tableau, and SQL. My superpower is to ask effective research questions and creatively leverage my skills and knowledge to reach solutions that create value.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -105,10 +105,9 @@
               </ul>
             </div>
           </div>
-          <!-- <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-          </p> -->
+          <p>
+            Three words describe my present self: Empathetic, Meticulous, and Reflective.
+          </p>
         </div>
       </div>
 
