--- a/index.html
+++ b/index.html
@@ -331,8 +331,8 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Lawrence Agyepong</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-            <p>
+            <!--<p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <p>-->
             <ul>
               <li>Accra, Ghana</li>
               <li>(233) 24-983-1290</li>
